--- a/nginx.conf
+++ b/nginx.conf
@@ -12,42 +12,27 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log  /var/log/nginx/access.log  main;
-
     sendfile        on;
     keepalive_timeout  65;
     server_tokens off;
-
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     server {
         listen 80;
         server_name localhost;
 
+        # Root folder where your HTML/Angular build is copied
         root /usr/share/nginx/html;
         index index.html;
 
-        # Angular SPA: redirect all requests to index.html
+        # Serve Angular SPA or HTML files
         location / {
             try_files $uri $uri/ /index.html;
         }
 
-        # Optional: caching for static assets
+        # Optional: caching static assets for better performance
         location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|map)$ {
             expires 1y;
             add_header Cache-Control "public";
-        }
-
-        # Optional: error pages
-        error_page 404 /index.html;
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-            root /usr/share/nginx/html;
         }
     }
 }
