--- a/nginx.conf
+++ b/nginx.conf
@@ -1,38 +1,62 @@
-user  nginx;
-worker_processes  auto;
+user root;
+worker_processes auto;
+error_log /var/log/nginx/error.log;
+pid /run/nginx.pid;
 
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+# Load dynamic modules. See /usr/share/doc/nginx/README.dynamic.
+include /usr/share/nginx/modules/*.conf;
 
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $request_time $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log /var/log/nginx/access.log main;
 
-    sendfile        on;
-    keepalive_timeout  65;
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 4096;
     server_tokens off;
+
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    # Load modular configuration files from the /etc/nginx/conf.d directory.
+    include /etc/nginx/conf.d/*.conf;
+
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1000;
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/x-javascript application/xml;
+    gzip_disable "MSIE [1-6]\.";
 
     server {
         listen 80;
-        server_name localhost;
+        listen [::]:80;
+        server_name _;
 
-        # Root folder where your HTML/Angular build is copied
         root /usr/share/nginx/html;
-        index index.html;
+        try_files $uri $uri/ /index.html;
 
-        # Serve Angular SPA or HTML files
-        location / {
-            try_files $uri $uri/ /index.html;
+        # Load configuration files for the default server block.
+        include /etc/nginx/default.d/*.conf;
+
+        error_page 404 /404.html;
+        location = /40x.html {
         }
 
-        # Optional: caching static assets for better performance
-        location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|map)$ {
-            expires 1y;
-            add_header Cache-Control "public";
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+        }
+
+        location /basic_status {
+            stub_status;
         }
     }
 }
