--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,6 @@ worker_processes auto;
 error_log /var/log/nginx/error.log;
 pid /run/nginx.pid;
 
-# Load dynamic modules. See /usr/share/doc/nginx/README.dynamic.
 include /usr/share/nginx/modules/*.conf;
 
 events {
@@ -11,6 +10,9 @@ events {
 }
 
 http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $request_time $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
@@ -20,19 +22,11 @@ http {
     tcp_nopush on;
     tcp_nodelay on;
     keepalive_timeout 65;
-    types_hash_max_size 4096;
     server_tokens off;
-
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-
-    # Load modular configuration files from the /etc/nginx/conf.d directory.
-    include /etc/nginx/conf.d/*.conf;
 
     gzip on;
     gzip_vary on;
     gzip_min_length 1000;
-    gzip_proxied expired no-cache no-store private auth;
     gzip_types text/plain text/css text/xml text/javascript application/javascript application/x-javascript application/xml;
     gzip_disable "MSIE [1-6]\.";
 
@@ -42,21 +36,32 @@ http {
         server_name _;
 
         root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
+        index index.html;
 
-        # Load configuration files for the default server block.
-        include /etc/nginx/default.d/*.conf;
-
-        error_page 404 /404.html;
-        location = /40x.html {
+        # SPA fallback
+        location / {
+            try_files $uri $uri/ /index.html;
         }
 
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
+        # Suppress favicon 404 logging
+        location = /favicon.ico {
+            log_not_found off;
+            access_log off;
         }
 
+        # Handle missing 404 and 50x pages gracefully
+        location = /40x.html { return 204; }
+        location = /50x.html { return 204; }
+
+        # Status endpoint
         location /basic_status {
             stub_status;
+        }
+
+        # Optional caching for static files
+        location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|map)$ {
+            expires 30d;
+            add_header Cache-Control "public";
         }
     }
 }
