--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:angularproject": "node dist/angularproject/server/server.mjs"
+    "serve:ssr:angularproject": "node dist/angularproject/server/server.mjs",
+    "serve:ssr:test": "node dist/test/server/server.mjs"
   },
   "private": true,
   "dependencies": {
